<resources>
    <string name="app_name">autoAttend</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="splash_date_alert">The end of your semester has reached. Do you want to extend your semester date?</string>
    <string name="splash_subClear_alert">All your subject will be cleared for new semester. Do you want to continue?</string>
    <string name="splash_extend_btn">Extend</string>
    <string name="splash_createNew_btn">No</string>
    <string name="splash_yes_btn">Yes</string>

    <string name="onboard_btn">Get Started</string>
    <string name="frag_1_h1">Never miss a class</string>
    <string name="frag_1_sub">Automated attendance sign-in with smart FailSafe feature to ensure successful sign in.</string>
    <string name="frag_2_h1">Scan your QR code only once</string>
    <string name="frag_2_sub">Sign in for attendance anywhere on-time without rescanning for QR code.</string>
    <string name="frag_3_h1">Always get notified on alerts</string>
    <string name="frag_3_sub">Get notified immediately when error occurs and also keep track of your attendance percentage.</string>

    <string name="credential_title">Credentials</string>
    <string name="menu_credential">SAVE</string>
    <string name="mail_text">Student ID</string>
    <string name="mail_helper_text">ID given by your university</string>
    <string name="password_text">Password</string>
    <string name="password_helper_text">Enter Student ID password</string>
    <string name="fingerprint_option">Unlock app with fingerprint</string>

    <string name="credential_setup">Credential Setup</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="confirm_btn">Confirm</string>

    <string name="schedule_setup">Schedule Setup</string>
    <string name="schedule_description">Choose the starting and ending date of your semester.</string>
    <string name="schedule_start_date">Start Date</string>
    <string name="schedule_end_date">End Date</string>
    <string name="schedule_finish_btn">Finish</string>

    <string name="addSub_title">Add New Class</string>
    <string name="addSub_title2">Edit Subject</string>
    <string name="addSub_title3">Edit Session</string>
    <string name="addSub_subName">Subject Name</string>
    <string name="addSub_classSession">Class Session</string>
    <string name="addSub_fromDate">From Date</string>
    <string name="addSub_toDate">To Date</string>
    <string name="addSub_day">Day</string>
    <string name="addSub_startTime">Start Time</string>
    <string name="addSub_endTime">End Time</string>
    <string name="addSub_attendanceLink">Attendance Link</string>
    <string name="addSub_scanQR">Scan QR</string>
    <string name="addSub_chooseColor">Choose a color</string>
    <string name="addSub_alertDialog_msg">This subject is already exists. Add this class session to the existing subject?</string>
    <string name="addSub_alertDialog_merge">MERGE</string>
    <string name="addSub_alertDialog_duplicate">DUPLICATE</string>
    <string name="addSub_monday">Monday</string>
    <string name="addSub_tues">Tuesday</string>
    <string name="addSub_wed">Wednesday</string>
    <string name="addSub_thu">Thursday</string>
    <string name="addSub_fri">Friday</string>
    <string name="addSub_lec">Lecture</string>
    <string name="addSub_tut">Tutorial</string>
    <string name="addSub_lab">Lab</string>
    <string name="addSub_redColor">Red</string>
    <string name="addSub_pinkColor">Pink</string>
    <string name="addSub_purpleColor">Purple</string>
    <string name="addSub_indigoColor">Indigo</string>
    <string name="addSub_blueColor">Blue</string>
    <string name="addSub_cyanColor">Cyan</string>
    <string name="addSub_tealColor">Teal</string>
    <string name="addSub_orangeColor">Orange</string>
    <string name="addSub_amberColor">Amber</string>
    <string name="addSub_blueGreyColor">Blue Grey</string>
    <string name="addSub_colorIcon">Color Icon</string>

    <string name="QRScan_title">Scan QR code</string>
    <string name="QRScan_alertDialog_OK_btn">OK</string>
    <string name="QRScan_alertDialog_msg">Permission to use the camera is rejected.</string>
    <string name="QRScan_signInDialog_msg">Attendance link detected. Signing you in…</string>
    <string name="QRScan_error">Connection Error. Please try again.</string>
    <string name="QRScan_invalidLink">The link is invalid.</string>

    <string name="SettingsFragments_CredentialSettings">Credential Setting</string>
    <string name="SettingsFragments_FailSafeSettings">FailSafe Setting</string>
    <string name="SettingsFragments_NotificationSettings">Notification Setting</string>
    <string name="SettingsFragments_Help">Help</string>

    <string name="FailSafeActivity_EnableFailSafe">Enable Fail Safe</string>
    <string name="FailSafeActivity_switchDesc">When enabled, this app will reattempt to log in case of log in failure</string>
    <string name="FailSafeActivity_intervalTime">Reattempt interval time</string>
    <string name="FailSafeActivity_SuffixText">Seconds</string>
    <string name="FailSafeActivity_timeInterval">Enter time interval</string>

    <string name="LinkVerifier_text">Verifying your attendance link…</string>

    <string name="AddNewSessionActivity_menu">Create New</string>

    <string name="NotificationActivity_attendance">Enable attendance notification</string>
    <string name="NotificationActivity_desc">Get notified on all sign in status for all class</string>

    <string name="classDetails_action_delete">DELETE</string>
    <string name="classDetails_action_edit">EDIT</string>

    <string name="pink">#e91e63</string>
    <string name="red">#f44336</string>
    <string name="purple">#9c27b0</string>
    <string name="indigo">#3f51b5</string>
    <string name="blue">#2196f3</string>
    <string name="cyan">#00bcd4</string>
    <string name="teal">#009688</string>
    <string name="orange">#ff5722</string>
    <string name="amber">#ffc107</string>
    <string name="blueGrey">#607d8b</string>

    <string name="main_settings">Settings</string>
    <string name="main_search">Search</string>

    <string name="bottom_sheet_subject_list">Subject List</string>
    <string name="bottom_sheet_history">History</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="fab_link">Add class with link</string>
    <string name="fab_qr">Add class with QR</string>

    <string name="subject_list_heading">Subjects</string>
    <string name="settings_heading">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addSub_title4">Add New Session</string>
    <string name="AddNewSessionActivity_title">Select a subject to add</string>
</resources>